crates/sui-adapter-transactional-tests/tests/mvcc/child_of_child.exp
processed 14 tasks

init:
A: object(0,0)

task 1 'publish'. lines 8-71:
Error: error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.vYE8Mtva1O/.tmpI119Il:27:21
   │
23 │         let  grand = Obj { id: object::new(ctx), value: 0 };
   │              ----- To use the variable mutably, it must be declared 'mut', e.g. 'mut grand'
   ·
27 │         ofield::add(&mut grand.id, KEY, parent);
   │                     ^^^^^^^^^^^^^ Invalid mutable borrow of immutable variable 'grand'



task 2 'programmable'. lines 73-75:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'view-object'. lines 77-77:
Error: task 3, lines 77-77. Unbound fake id 2,2

task 4 'programmable'. lines 79-80:
Error: INVALID TEST. Unknown object, object(2,2)

task 5 'view-object'. lines 82-82:
Error: task 5, lines 82-82. Unbound fake id 2,2

task 6 'programmable'. lines 84-85:
Error: INVALID TEST. Unknown object, object(2,2)

task 7 'view-object'. lines 87-90:
Error: task 7, lines 87-87. Unbound fake id 2,2

task 8 'programmable'. lines 92-93:
Error: INVALID TEST. Unknown object, object(2,2)

task 9 'programmable'. lines 95-96:
Error: INVALID TEST. Unknown object, object(2,2)

task 10 'programmable'. lines 98-102:
Error: INVALID TEST. Unknown object, object(2,2)

task 11 'programmable'. lines 104-105:
Error: INVALID TEST. Unknown object, object(2,2)

task 12 'programmable'. lines 107-108:
Error: INVALID TEST. Unknown object, object(2,2)

task 13 'programmable'. lines 110-111:
Error: INVALID TEST. Unknown object, object(2,2)
